--- a/AppLogin.Android/AppLogin.Android.csproj
+++ b/AppLogin.Android/AppLogin.Android.csproj
@@ -83,15 +83,14 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Resources\drawable\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AppLogin\AppLogin.csproj">
       <Project>{A3CBA758-DA61-4A83-90F9-8D6F8CC83F79}</Project>
       <Name>AppLogin</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Resources\drawable\png-transparent-user-computer-icons-user-miscellaneous-cdr-rectangle-thumbnail.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
